# mo_pack

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  INSTALL  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci-locks.yml  ci-manifest.yml  ci-tests.yml
lib/mo_pack/: __init__.py  _packing.pyx  packing.pyx
lib/mo_pack/tests/: __init__.py  test_compress_rle.py  test_decompress_rle.py  test_rle.py  test_wgdos.py
lib/mo_pack/tests/test_data/: nae.20100104-06_0001_0001.pp
requirements/: README.md  mo-pack-py313_linux-64_conda_spec.txt  mo-pack.yml  mo_pack.yml
src/mo_pack/: __init__.py  _packing.pyx
src/mo_pack/tests/: __init__.py  test_compress_rle.py  test_decompress_rle.py  test_rle.py  test_wgdos.py
